--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>domain-models-runtime</artifactId>
+      <version>21.0.4</version>
+    </dependency>
+    <dependency>
       <groupId>org.folio.okapi</groupId>
       <artifactId>okapi-common</artifactId>
       <version>2.23.0</version>
@@ -75,6 +80,20 @@
       <artifactId>vertx-unit</artifactId>
       <version>${vertx-version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.restassured</groupId>
+      <artifactId>rest-assured-common</artifactId>
+      <version>2.8.0</version>
+      <scope>test</scope>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.restassured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>2.8.0</version>
+      <scope>test</scope>
+      <type>jar</type>
     </dependency>
   </dependencies>
 
@@ -158,7 +177,7 @@
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
                     <Main-Class>org.folio.okapi.common.MainLauncher</Main-Class>
-                    <Main-Verticle>org.folio.inventorymatcher.MainVerticle</Main-Verticle>
+                    <Main-Verticle>org.folio.inventorymatch.MainVerticle</Main-Verticle>
                   </manifestEntries>
                 </transformer>
               </transformers>
@@ -168,6 +187,25 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
+        <configuration>
+          <!-- TODO: update to version 3.0.0 and remove useSystemClassLoader
+               https://issues.folio.org/browse/FOLIO-1609
+               https://issues.apache.org/jira/browse/SUREFIRE-1588
+          -->
+          <useSystemClassLoader>false</useSystemClassLoader>
+          <excludes>
+            <exclude>**/package/**XYZ.class</exclude>
+          </excludes>
+          <includes>
+            <include>**/test/InstanceMatchingTestSuite.class</include>
+          </includes>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
