--- a/pom.xml
+++ b/pom.xml
@@ -201,7 +201,8 @@
             <exclude>**/package/**XYZ.class</exclude>
           </excludes>
           <includes>
-            <include>**/test/InstanceMatchingTestSuite.class</include>
+              <include>**/test/InstanceMatchingTestSuite.class</include>
+              <include>**/UnitTest.class</include>
           </includes>
         </configuration>
       </plugin>
