--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.folio</groupId>
-  <artifactId>mod-inventory-match</artifactId>
-  <version>3.2.0</version>
-  <name>mod-inventory-match</name>
+  <artifactId>mod-inventory-update</artifactId>
+  <version>0.0.1</version>
+  <name>mod-inventory-update</name>
 
   <licenses>
     <license>
@@ -177,7 +177,7 @@
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
                     <Main-Class>org.folio.okapi.common.MainLauncher</Main-Class>
-                    <Main-Verticle>org.folio.inventorymatch.MainVerticle</Main-Verticle>
+                    <Main-Verticle>org.folio.inventoryupdate.MainVerticle</Main-Verticle>
                   </manifestEntries>
                 </transformer>
               </transformers>
