--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.folio</groupId>
   <artifactId>mod-inventory-update</artifactId>
   <version>0.0.3-SNAPSHOT</version>
-  <name>mod-inventory-update</name>
+  <name>Inventory Update Module</name>
 
   <licenses>
     <license>
