Copy API documention JSON to target/

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <vertx-version>3.9.2</vertx-version>
     <docker.registry>docker.indexdata.com:5000</docker.registry>
+    <ramlfiles_path>${basedir}/ramls/</ramlfiles_path>
   </properties>
 
   <dependencies>
@@ -91,6 +92,22 @@
         <artifactId>maven-resources-plugin</artifactId>
         <version>3.0.1</version>
         <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/classes/apidocs/raml</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${ramlfiles_path}</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
           <execution>
             <id>filter-descriptor-inputs</id>
             <phase>generate-resources</phase>
