--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
             </goals>
             <configuration>
               <target>
-                <replaceregexp match="baseUri:.+$" replace="baseUri: http://localhost:{http.port}" byline="true">
+                <replaceregexp match="baseUri:.+$" replace="baseUri: http://localhost:8081" byline="true">
                   <fileset dir="${basedir}/target/classes/apidocs/raml" includes="**/*.raml"/>
                 </replaceregexp>
               </target>
