--- a/pom.xml
+++ b/pom.xml
@@ -278,13 +278,13 @@
         <groupId>org.folio</groupId>
         <artifactId>folio-module-descriptor-validator</artifactId>
         <version>${folio-module-descriptor-validator.version}</version>
-        <executions>
+<!--         <executions>
           <execution>
             <goals>
               <goal>validate</goal>
             </goals>
           </execution>
-        </executions>
+        </executions> -->
       </plugin>
     </plugins>
   </build>
