--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,19 +1,27 @@
 status = error
 name = PropertiesConfig
-packages = org.folio.okapi.common.logging
 
 filters = threshold
 
 filter.threshold.type = ThresholdFilter
 filter.threshold.level = info
 
-appenders = console
+appender.full.type = Console
+appender.full.name = FULL
+appender.full.layout.type = PatternLayout
+appender.full.layout.pattern = %d{HH:mm:ss} [${map:requestid}] [${map:tenantid}] [${map:userid}] [${map:moduleid}] %-5p %-20.20C{1} %m%n
 
-appender.console.type = Console
-appender.console.name = STDOUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{HH:mm:ss} [$${FolioLoggingContext:requestid}] [$${FolioLoggingContext:tenantid}] [$${FolioLoggingContext:userid}] [$${FolioLoggingContext:moduleid}] %-5p %-20.20C{1} %m%n
+appender.empty.type = Console
+appender.empty.name = EMPTY
+appender.empty.layout.type = PatternLayout
+appender.empty.layout.pattern = %d{HH:mm:ss} [] [] [] [] %-5p %-20.20C{1} %m%n
 
 rootLogger.level = info
-rootLogger.appenderRefs = info
-rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRefs = empty
+rootLogger.appenderRef.basic.ref = EMPTY
+
+logger.full.level = info
+logger.full.appenderRefs = full
+logger.full.appenderRef.full.ref = FULL
+logger.full.name = full
+logger.full.additivity = false
