--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
+      <artifactId>vertx-launcher-application</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
       <artifactId>vertx-web</artifactId>
     </dependency>
    <dependency>
@@ -293,7 +297,8 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>org.folio.okapi.common.MainLauncher</Main-Class>
+                    <!-- change Main-Class to io.org.folio.okapi.common.MainLauncher when OKAPI-1218 is done -->
+                    <Main-Class>io.vertx.launcher.application.VertxApplication</Main-Class>
                     <Main-Verticle>org.folio.inventoryupdate.MainVerticle</Main-Verticle>
                     <Multi-Release>true</Multi-Release>
                   </manifestEntries>
