--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>5.17.0</version>
+        <version>${mockito.version}</version>
       </dependency>
       <dependency>
         <groupId>org.testcontainers</groupId>
